@@ -1,3 +1,7 @@
+Fri Feb  6 12:11:24 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* ruby.c (process_options): set initial default_external before -r.
+
 Fri Feb  6 12:03:47 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ruby.c (process_options): -K and -E in shebang should be reflect to
